--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 
 <html ng-app="myApp" lang="en">
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-        <script src="test1.js"></script>
         <meta charset="utf-8" />
         <title></title>
     </head>
     <body ng-controller="TestController as test">
         The controller text is {{test.helloText}}
+
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
