--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <title></title>
     </head>
-    <body ng-controller="TestController as test">
-        The controller text is {{test.helloText}}
+    <body>
+        <div ng-view></div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
