--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
