--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/controllers.js"></script>
     </body>
 </html>
