--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
         <title></title>
     </head>
     <body>
+        <nav>
+            <a href="/home">Home</a>
+            <a href="/ev">EV</a>
+        </nav>
         <div ng-view></div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
+        <script src="js/paper-full.min.js"></script>
     </body>
 </html>
