--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <nav>
-            <a href="/home">Home</a>
-            <a href="/ev">EV</a>
+            <a href="/#/home">Home</a>
+            <a href="/#/ev">EV</a>
         </nav>
         <div ng-view></div>
 
