--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
-        <script src="js/paper-full.min.js"></script>
+        <script src="js/paper.js"></script>
     </body>
 </html>
